--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,6 +1,8 @@
 <div class="wrapper">
   <div class="container">
-    <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
+    <div class="title my-5">
+      <h4> Pourquoi réduire ses déchets en entreprise ? </h4>
+    </div>
 
     <div class="row">
       <div class="col-12 col-sm-4">
@@ -11,7 +13,7 @@
               <h4 class="card-title">Environnement</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">140 kg de déchets / an en moyenne sont produit par un·e salarié·e de bureau</p>
+              <p class="card-text"><strong> 140 kg de déchets / an </strong> en moyenne sont produit par un·e salarié·e de bureau</p>
             </div>
           </div>
 
@@ -33,7 +35,7 @@
               <h4 class="card-title">Management</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">77% des salariés augmentent leur fierté d'appartenance grâce au Développement Durable*</p>
+              <p class="card-text"><strong> 77% des salariés augmentent leur fierté d'appartenance</strong> grâce au Développement Durable*</p>
             </div>
           </div>
 
@@ -55,7 +57,7 @@
               <h4 class="card-title">Image externe</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">82 % des entreprises considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
+              <p class="card-text"> <strong>82 % des entreprises </strong>considèrent le dDéveloppement dDurable comme un facteur de différenciation*</p>
             </div>
           </div>
 
@@ -73,11 +75,11 @@
       <div class="col-12 col-sm-4">
         <figure class="card card-flip">
           <div class="card card-height">
-             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("economie.jpg")%>)">
+            <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("economie.jpg")%>)">
               <h4 class="card-title">Economie</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">Plus de 14x la seule facture du prestataire déchets : coût complet des déchets*</p>
+              <p class="card-text">Plus de <strong>14x la seule facture du prestataire déchets </strong>: coût complet des déchets*</p>
             </div>
           </div>
 
@@ -99,11 +101,11 @@
       <div class="col-12 col-sm-4">
         <figure class="card card-flip">
           <div class="card card-height">
-             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("logistique.jpg")%>)">
+            <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("logistique.jpg")%>)">
               <h4 class="card-title">Logistique</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">Des contenants adaptés font gagner de 2 à 10 fois plus d’espace et améliorent la logistique d'évacuation.</p>
+              <p class="card-text">Des contenants adaptés font gagner de <strong>2 à 10 fois plus d’espace</strong> et améliorent la logistique d'évacuation.</p>
             </div>
           </div>
 
@@ -121,11 +123,11 @@
       <div class="col-12 col-sm-4">
         <figure class="card card-flip">
           <div class="card card-height">
-             <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("reglementation.jpg")%>)">
+            <div class="card-img-top  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("reglementation.jpg")%>)">
               <h4 class="card-title">Réglementation</h4>
             </div>
             <div class="card-body">
-              <p class="card-text">5 flux de déchets doivent obligatoirement être triés et valorisés</p>
+              <p class="card-text"> <strong>5 flux de déchets</strong> doivent obligatoirement être triés et valorisés</p>
             </div>
           </div>
 
@@ -141,59 +143,165 @@
       </div>
     </div>
 
+    <div class="title my-5">
+      <h4> Pourquoi ma structure s'engagerait dans ce défi ?</h4>
+    </div>
 
-      <div>
-        <h1>2. Pourquoi ma structure s'engagerait dans ce défi ?</h1>
-
-        <div class="flip-card">
+    <div class="row">
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("valeur.jpg")%>)">
+              <h4 class="card-title">Etre mis en valeur</h4>
+            </div>
           </div>
-          <h2>Pour être mis en valeur</h2>
-          <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
-        </div>
 
-        <h4>Pour être mis en valeur</h4>
-        <p>Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements. </p>
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour être mis en valeur</h4>
+              <p class="card-text">
+                Une communication externe sera mise en œuvre tout au long du défi, et notamment lors de l'événement de clôture, pour valoriser les participants et leurs accomplissements.
+              </p>
+            </div>
+          </div>
+        </figure>
       </div>
 
-      <div class="flip-card">
-        <h4>Pour inclure vos équipes</h4>
-        <p>Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.</p>
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("inclure.jpg")%>)">
+              <h4 class="card-title">Inclure vos équipes</h4>
+            </div>
+          </div>
+
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour inclure vos équipes</h4>
+              <p class="card-text">
+                Le Défi a pour objectif d'impliquer tous les salariés de la structure, de générer une réelle collaboration. Ainsi participer au projet permet, au sein de chaque structure, d'agir ensemble, de fédérer et mobiliser une équipe autour d'un projet commun.
+              </p>
+            </div>
+          </div>
+        </figure>
       </div>
 
-      <div class="flip-card">
-        <h4>Pour l'aspect collectif</h4>
-        <p>L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
-        </p>
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("collectif.jpg")%>)">
+              <h4 class="card-title">Pour le collectif</h4>
+            </div>
+          </div>
+
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour le collectif</h4>
+              <p class="card-text">
+                L'intérêt du défi est de mettre en commun les doutes, les difficultés, les idées, les bonnes pratiques. Les déchets de fonctionnement concernent toutes les structures, ce qui permet de se nourrir des expériences des autres.
+              </p>
+            </div>
+          </div>
+        </figure>
       </div>
 
-        <div class="flip-card">
-          <h2>Pour l'accompagnement</h2>
-          <p>Tout au long du défi, un suivi des déchets et des comportement est effectué en interne. Des rencontres collectives régulières, ainsi qu'un accompagnement individuel permettent à chaque structure de fertiliser le terreau emmenant à l'action collective et durable.</p>
-        </div>
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("accompagnement.jpg")%>)">
+              <h4 class="card-title">Pour l'accompagnement</h4>
+            </div>
+          </div>
 
-        <div class="flip-card">
-          <h2>Pour son type de déchet concerné</h2>
-          <p>Toute personne, toute entreprise est concernée par les déchets de fonctionnement (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général peu d'investissements et sont rapides à mettre en place.  </p>
-        </div>
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour l'accompagnement</h4>
+              <p class="card-text">
+                Tout au long du défi, un suivi des déchets et des comportement est effectué en interne. Des rencontres collectives régulières, ainsi qu'un accompagnement individuel permettent à chaque structure de fertiliser le terreau emmenant à l'action collective et durable.
+              </p>
+            </div>
+          </div>
+        </figure>
+      </div>
 
-        <div class="flip-card">
-          <h2>Pour sa complémentarité</h2>
-          <p>Le Défi  est complémentaire à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec le vous pourrez ainsi initier ou compléter votre  démarche d'éco-responsabilité.</p>
-        </div>
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("dechet.jpg")%>)">
+              <h4 class="card-title">Pour son type de déchet concerné</h4>
+            </div>
+          </div>
 
-        <div class="flip-card">
-          <h2>Pour son approche comportementale</h2>
-          <p>L'idée est d'accompagner les structures participantes pour qu'elles fassent par elles-mêmes : faire émerger les idées, les accompagner dans les choix, les aider à la mise en place de solutions. Le but est de changer les comportements dans la durée, de provoquer l'engagement et l'action.</p>
-        </div>
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour son type de déchet concerné</h4>
+              <p class="card-text">
+                Toute personne, toute entreprise est concernée par les déchets de fonctionnement (papier, stylos, ordinateurs, gobelets de café, emballages etc).  Les changements à ce niveau demandent en général peu d'investissements et sont rapides à mettre en place.
+              </p>
+            </div>
+          </div>
+        </figure>
+      </div>
 
-        <div class="flip-card">
-          <h2>Pour gagner !</h2>
-          <p>Le défi apporte également une émulation collective car la compétition favorise l'envie de s'améliorer et de finir gagnant.
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("complementaire.jpg")%>)">
+              <h4 class="card-title">Pour sa complémentarité</h4>
+            </div>
+          </div>
 
-          La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! La plus belle évolution (technique et comportementale) donnera un vainqueur, qui sera mis en avant dans toute la communication externe.
-          </p>
-        </div>
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour sa complémentarité</h4>
+              <p class="card-text">
+                Le Défi  est complémentaire à d'autres outils et démarches existants : RSE, ISO 14001 ISO 26000, bilan carbone, Agenda 21, éco-structure (école, commerçants), labels spécifiques, Gagnants sur tous les coûts etc. Avec le vous pourrez ainsi initier ou compléter votre  démarche d'éco-responsabilité.
+              </p>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("comportemental.jpg")%>)">
+              <h4 class="card-title">Pour son approche comportementale</h4>
+            </div>
+          </div>
+
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour son approche comportementale</h4>
+              <p class="card-text">
+                L'idée est d'accompagner les structures participantes pour qu'elles fassent par elles-mêmes : faire émerger les idées, les accompagner dans les choix, les aider à la mise en place de solutions. Le but est de changer les comportements dans la durée, de provoquer l'engagement et l'action.
+              </p>
+            </div>
+          </div>
+        </figure>
+      </div>
+
+      <div class="col-12 col-sm-4">
+        <figure class="card card-flip">
+          <div class="card card-height-small">
+            <div class="card-img  d-flex justify-content-center align-items-center" style="background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),  url(<%= image_path("win.jpg")%>)">
+              <h4 class="card-title">Pour gagner !</h4>
+            </div>
+          </div>
+
+          <div class="card card-height-small">
+            <div class="card-body">
+              <h4 class="card-title">Pour gagner !</h4>
+              <p class="card-text">
+                Le défi apporte également une émulation collective car la compétition favorise l'envie de s'améliorer et de finir gagnant.
+
+                La cerise sur la gâteau, en plus de tous les autres avantages du Défi, c'est de gagner ! La plus belle évolution (technique et comportementale) donnera un vainqueur, qui sera mis en avant dans toute la communication externe.
+              </p>
+            </div>
+          </div>
+        </figure>
       </div>
     </div>
   </div>
 </div>
+
