--- a/app/stylesheets/config/_colors.scss
+++ b/app/stylesheets/config/_colors.scss
@@ -1,10 +1,10 @@
 // Define variables for your color scheme
 
-// For example:
-$red: #EE5F5B;
+$red: #C42021;
 $blue: #00aacd;
 $yellow: #FDB631;
 $orange: #E67E22;
 $green: #99CC00;
 $gray: #000000;
+$black: #333333;
 $light-gray: #F4F4F4;
