--- a/app/views/pages/pourquoi.html.erb
+++ b/app/views/pages/pourquoi.html.erb
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper h-100">
   <div class="container">
     <h1>1. Pourquoi réduire ses déchets en entreprise ? </h1>
 
