--- a/app/stylesheets/components/_footer.scss
+++ b/app/stylesheets/components/_footer.scss
@@ -1,7 +1,7 @@
 .footer {
-  background: $primary;
+  background: $light-gray;
   .footer-link {
     width: 100%;
-    color: $light-gray;
+    color: $primary;
   }
 }
