--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -1,18 +1,20 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light" id="nav_bar">
-  <%= link_to root_path, class:"navbar-brand" do %>
-    <%= inline_svg "home", width: 30, class:"text-white" %>
-  <% end %>
-  <div class="navbar-logo ml-4 align-items-center justify-content-center" id="nav_logo">
+<nav class="navbar navbar-expand-lg justify-content-end" id="nav_bar">
+  <div class="navbar-logo align-items-center justify-content-center" id="nav_logo">
     <%= link_to root_path, class:"navbar-brand" do %>
       <%= inline_svg "logo", width:50 %>
     <% end %>
   </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
+  <button class="navbar-toggler justify-content-end ml-2" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span><%=inline_svg "bars-solid", class:"navbar-toggler-icon"%></span>
   </button>
-  <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
-    <ul class="navbar-nav">
-      <li class="nav-item dropdown">
+  <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
+    <ul class="navbar-nav mr-5">
+      <li class="nav-item m-2">
+        <%= link_to root_path, class:"navbar-brand home-nav-link" do %>
+          <%= inline_svg "home", width: 30 %>
+        <% end %>
+      </li>
+      <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Comment
         </a>
@@ -25,7 +27,7 @@
           <%= link_to "Combien ça coûte ?", "/comment", class:"dropdown-item", id:"comment6"%>
         </div>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Pourquoi
         </a>
@@ -34,7 +36,7 @@
           <%= link_to "2", "/pourquoi", class:"dropdown-item", id:"pourquoi2"%>
         </div>
       </li>
-      <li class="nav-item dropdown">
+      <li class="nav-item m-2 dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Soutenir
         </a>
@@ -46,7 +48,7 @@
           <%= link_to "Témoigner", "/soutenir", class:"dropdown-item", id:"soutenir5"%>
         </div>
       </li>
-      <li class="nav-item">
+      <li class="nav-item m-2">
         <%= link_to "S'inscrire", "/inscription", class:"nav-link text-light-gray" %>
       </li>
       <!-- <li class="nav-item">
