--- a/app/stylesheets/components/_navbar.scss
+++ b/app/stylesheets/components/_navbar.scss
@@ -19,7 +19,7 @@
   .dropdown:hover .dropdown-menu {
     display: block;
   }
-  @media (max-width: $mobile) {
+  @media (max-width: $desktop) {
     height: auto;
   }
 }
@@ -53,7 +53,7 @@
     .navbar-toggler[data-toggle="collapse"] {
       color: $primary;
     }
-    @media (max-width: $mobile) {
+    @media (max-width: $desktop) {
       height: auto;
     }
   }
