changed the cards

--- a/app/views/shared/_navbar_primary.html.erb
+++ b/app/views/shared/_navbar_primary.html.erb
@@ -32,8 +32,8 @@
           Pourquoi
         </a>
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-          <%= link_to "1", "/pourquoi", class:"dropdown-item", id:"pourquoi1"%>
-          <%= link_to "2", "/pourquoi", class:"dropdown-item", id:"pourquoi2"%>
+          <%= link_to "Pourquoi réduire ses déchets ?", pourquoi_path(anchor: "pourquoi1"), class:"dropdown-item"%>
+          <%= link_to "Pourquoi mon entreprise ?", pourquoi_path(anchor: "pourquoi2"), class:"dropdown-item"%>
         </div>
       </li>
       <li class="nav-item m-2 dropdown">
