--- a/app/stylesheets/components/_flip-card.scss
+++ b/app/stylesheets/components/_flip-card.scss
@@ -13,12 +13,12 @@
       margin: 0;
    }
 
-   .card-height {
+   .card-size {
     height: 500px;
     min-width: 300px;
    }
 
-   .card-height-small {
+   .card-size-small {
     height: 300px;
     min-width: 300px;
    }
@@ -29,7 +29,7 @@
     background-size: cover;
     background-position: center;
 
-    h4 {
+    h3 {
       color: white;
       text-align: center;
     }
@@ -41,7 +41,7 @@
     background-size: cover;
     background-position: center;
 
-    h4 {
+    h3 {
       color: white;
       text-align: center;
     }
@@ -72,6 +72,12 @@
       .card:last-of-type {
          transform: rotateY(0deg);
       }
+   }
+
+   .fact {
+    font-size: 20px;
+    padding: 50px;
+    text-align: center;
    }
 
 }
