start comment page

--- a/app/views/pages/comment.html.erb
+++ b/app/views/pages/comment.html.erb
@@ -1,132 +1,88 @@
-layout "home"
+<div class="wrapper">
+  <div class="container mt-5">
+    <h1>Comment</h1>
+    <div class="sous-menu">
+      <h2>Les objectifs du Défi</h2>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+      <p>
+        Le Défi consiste en l'accompagnement structurel et individuel des établissements participants dans l’étude et la mise en place de solutions techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.
 
-<h1>Comment</h1>
+        ◦ Objectifs principaux :
+        ▪ Réduire la production de déchets et les impacts environnementaux associés
+        ▪ Augmenter la valorisation matière, organique voire énergétique des déchets produits
+        ▪ Intéresser et mobiliser les professionnels à prévenir et gérer leurs déchets
+        ▪ Valoriser publiquement les démarches exemplaires des établissements participants
 
-<div class="sous-menu">
-  <h2>Les objectifs du Défi</h2>
-  <p>
-    Le Défi consiste en l'accompagnement structurel et individuel des établissements participants dans l’étude et la mise en place de solutions techniques (poubelles, affichages, équipement ZD), organisationnelles et comportementales (procédures, missions, partenariats…) pour réduire leurs déchets.
+        ◦ Objectifs secondaires :
+        ▪ Réduire les coûts de gestion des déchets
+        ▪ Donner une nouvelle représentation psycho-sociologique positive du sujet des déchets
+        ▪ Développer le lien social
+        ▪ Développer la culture d’établissement autour des déchets
+        ▪ Développer des synergies en écologie industrielle entre les participants du défi et hors-défi.
+        ▪ Valoriser les acteurs locaux de la filière des déchets
+      </p>
+    </div>
+    <div class="sous-menu ">
+      <h2>Les structures éligibles</h2>
+      <p>
+        Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : public ou privé, quelque soit son activité ou sa taille.
+        Pour ce premier Défi, les structures participantes doivent résider dans le territoire de Bordeaux Métropole.
 
-      ◦ Objectifs principaux :
-          ▪ Réduire la production de déchets et les impacts environnementaux associés
-          ▪ Augmenter la valorisation matière, organique voire énergétique des déchets produits
-          ▪ Intéresser et mobiliser les professionnels à prévenir et gérer leurs déchets
-          ▪ Valoriser publiquement les démarches exemplaires des établissements participants
+        L'objectif est d'étendre le Défi à de nouveaux territoires. Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? - lien vers accueillir
+      </p>
+    </div>
 
-      ◦ Objectifs secondaires :
-          ▪ Réduire les coûts de gestion des déchets
-          ▪ Donner une nouvelle représentation psycho-sociologique positive du sujet des déchets
-          ▪ Développer le lien social
-          ▪ Développer la culture d’établissement autour des déchets
-          ▪ Développer des synergies en écologie industrielle entre les participants du défi et hors-défi.
-          ▪ Valoriser les acteurs locaux de la filière des déchets
-  </p>
-</div>
+    <div class="sous-menu">
+      <h2>Les déchets concernés</h2>
+      <p>
+        Emballages (bouteilles, cannettes etc), fournitures de bureau (papiers, stylos etc), matériel informatique (ordinateurs, téléphones etc), vaisselle (gobelets de café, verre en plastique pour la fontaine à eau etc), biodéchets (marc de café etc), mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
+      </p>
+    </div>
 
-<div class="sous-menu">
-  <h2>Les structures éligibles</h2>
-  <p>
-    Tout professionnel souhaitant travailler sur ses déchets de fonctionnement est le bienvenu : public ou privé, quelque soit son activité ou sa taille.
-    Pour ce premier Défi, les structures participantes doivent résider dans le territoire de Bordeaux Métropole.
-
-    L'objectif est d'étendre le Défi à de nouveaux territoires. Vous aimeriez participer mais n'êtes pas dans la zone géographique concernée ? - lien vers accueillir
-  </p>
-</div>
-
-<div class="sous-menu">
-  <h2>Les déchets concernés</h2>
-  <p>
-    Emballages (bouteilles, cannettes etc), fournitures de bureau (papiers, stylos etc), matériel informatique (ordinateurs, téléphones etc), vaisselle (gobelets de café, verre en plastique pour la fontaine à eau etc), biodéchets (marc de café etc), mobilier, mégots, ampoules, piles, cartouches d'encre, produits d'entretien, cartons, palettes...
-  </p>
-</div>
-
-<div class="sous-menu">
-  <h2>Comment ça se passe ?</h2>
-  <p>
-    Collecte de données
-    Sur une durée de 6 mois, les structures devront mesurer régulièrement leur production de déchets et évaluer leurs comportement, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur progression et leur classement par rapport aux autres.
+    <div class="sous-menu">
+      <h2>Comment ça se passe ?</h2>
+      <p>
+        Collecte de données
+        Sur une durée de 6 mois, les structures devront mesurer régulièrement leur production de déchets et évaluer leurs comportement, en remplissant des formulaires sur ce site (espace participant). Elles pourront ainsi visualiser leur progression et leur classement par rapport aux autres.
 
 
-    Activités collectives
-        • Ateliers-formations échanges (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
+        Activités collectives
+            • Ateliers-formations échanges (enjeux-problématiques, causes-conséquences, acteurs de la filière, réglementation, solutions globales, locales et individuelles, avancement dans le défi…)
 
-        • Rencontres et visites d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences hors-site de pairs.
+            • Rencontres et visites d’acteurs sur site (installations techniques de prévention et gestion des déchets, établissements exemplaires…) et retours d'expériences hors-site de pairs.
 
-        • Ateliers pratiques (outils de communication-sensibilisation, fabrication de produits…)
+            • Ateliers pratiques (outils de communication-sensibilisation, fabrication de produits…)
 
-        • Serious game pour adultes sur les déchets (jeu de société, grand jeu, animation ludique…)
+            • Serious game pour adultes sur les déchets (jeu de société, grand jeu, animation ludique…)
 
-        • Durant le défi, des « sous-défis » facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
+            • Durant le défi, des « sous-défis » facultatifs sont proposés aux établissements afin de leur offrir une autre forme de stimulation pour agir concrètement en interne sur les déchets
 
-    Accompagnement individuel
-    Un suivi régulier sera effectué avec chaque structure pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.
+        Accompagnement individuel
+        Un suivi régulier sera effectué avec chaque structure pour évaluer sa progression dans la démarche et l'accompagner dans la mise en place des actions : revue des données collectées, échanges par mail et téléphone.
 
-    Documents
-    Charte, règlement... - liens pour télécharger des documents à créer
-  </p>
-</div>
+        Documents
+        Charte, règlement... - liens pour télécharger des documents à créer
+      </p>
+    </div>
 
-<div class="sous-menu">
-  <h2>Planning</h2>
-  <p>Schéma à importer</p>
-</div>
+    <div class="sous-menu">
+      <h2>Planning</h2>
+      <p>Schéma à importer</p>
+    </div>
 
-<div class="sous-menu">
-  <h2>Combien ça coûte ?</h2>
-  <p>
-    La participation au Défi comprend un prix forfaitaire de 150€, plus un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.
-    Exemples :
-        • mon organisation comprend 10 employés, la participation au Défi sera de 150+10x10 = 250€
-        • mon organisation comprend 100 employés, la participation au Défi sera de 150+10x100 = 1150€
-  </p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
-</div>
-
-<div class="sous-menu">
-  <h2></h2>
-  <p></p>
+    <div class="sous-menu">
+      <h2>Combien ça coûte ?</h2>
+      <p>
+        La participation au Défi comprend un prix forfaitaire de 150€, plus un tarif qui dépend de la taille de votre établissement : 10€ par salarié.e.
+        Exemples :
+            • mon organisation comprend 10 employés, la participation au Défi sera de 150+10x10 = 250€
+            • mon organisation comprend 100 employés, la participation au Défi sera de 150+10x100 = 1150€
+      </p>
+    </div>
+  </div>
 </div>
